<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context=".ThirdActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/Button1Change"/>


    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/Button2Change"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/purple_200"
        android:text="@string/demo_text1"/>

    <ImageView
        android:id="@+id/testImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/i"/>


    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/purple_200"
        android:text="@string/demo_text2"/>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:visibility="gone"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/purple_200"
        android:text="@string/demo_text3"/>

</LinearLayout>