<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FourthActivity">

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/value_animator"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:text="@string/object_animator"/>

    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:background="@color/purple_200"
        android:text="@string/demo_text1"/>

    <ImageView
        android:id="@+id/testImage"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:padding="10dp"
        android:src="@drawable/i"/>

</LinearLayout>